# hermeneia

./: README.md
hermeneia/: README.md  index.html  package-lock.json  package.json
hermeneia/src/: App.tsx
hermeneia/src-tauri/: Cargo.toml  tauri.conf.json
hermeneia/src-tauri/capabilities/: default.json
hermeneia/src-tauri/src/: error.rs  gpu.rs  lib.rs  main.rs
hermeneia/src-tauri/src/audio/: decoder.rs  encoder.rs  mod.rs  playback.rs  trim.rs  types.rs  waveform.rs
hermeneia/src/components/: FileUploader.css  FileUploader.tsx  GreekScrollLoader.css  GreekScrollLoader.tsx  Home.css  Home.tsx  WaveformEditor.css  WaveformEditor.tsx
hermeneia/src/pages/: AudioEditor.css  AudioEditor.tsx  Home.css  Home.tsx
hermeneia/src/styles/: global.css
hermeneia/src/types/: audio.ts
hermeneia/src/utils/: theme.ts
