[package]
name = "hermeneia"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "hermeneia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hermeneia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binary for testing audio trimming
[[bin]]
name = "audio-trim"
path = "src/bin/audio_trim.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Audio dependencies
symphonia = { version = "0.5", features = [
    "all-codecs",  # All audio codecs (MP3, AAC, FLAC, etc.)
    "all-formats", # All container formats
] }
hound = "3.5"                                        # WAV I/O
rubato = "0.16"                                      # Resample
dasp = "0.11"                                        # Effects
cpal = "0.15"                                        # Playback

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# custom
thiserror = "1"
anyhow = "1"

